[project]
name = "devto-mcp-server"
version = "1.0.0"
description = "MCP server for reading, researching, drafting, and publishing Dev.to content via the Forem API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Arindam Majumder"}
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
    "openai-agents==0.0.13",
]
